Fix SVG arrow on IE11

--- a/src/atoms/text_link/text_link.scss
+++ b/src/atoms/text_link/text_link.scss
@@ -19,6 +19,9 @@
 
     &--iframe-arrow {
       margin-left: 7px;
+      @media all and ( -ms-high-contrast: none ) {
+        height: 1.8rem;
+      }
     }
   }
 
